<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/header2_background">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/white"
            android:focusable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/back_icon" />

        <TextView
            android:id="@+id/tvHeaderAdd"
            style="@style/Header"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="143dp"
            android:layout_marginTop="58dp"
            android:text="@string/page2_header"
            android:textColor="@color/white" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnSaveUpdate"
        android:layout_below="@id/navView"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="360dp"
                android:layout_height="75dp"
                android:layout_marginTop="33dp"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="11dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    style="@style/FeatureText"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/etName"
                    style="@style/NameText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:inputType="textPersonName"
                    android:textCursorDrawable="@color/feature_color" />
            </LinearLayout>

            <TextView
                android:id="@+id/nameError"
                style="@style/FeatureText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/name_error"
                android:textColor="@color/error_color"
                android:visibility="invisible"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:id="@+id/surnameLayout"
                android:layout_width="360dp"
                android:layout_height="75dp"
                android:layout_marginTop="33dp"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="11dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    style="@style/FeatureText"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:text="@string/surname" />

                <EditText
                    android:id="@+id/etSurname"
                    style="@style/NameText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:inputType="textPersonName"
                    android:textCursorDrawable="@color/feature_color" />

            </LinearLayout>

            <TextView
                android:id="@+id/surnameError"
                style="@style/FeatureText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/surname_error"
                android:textColor="@color/error_color"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/dateOfBirthLayout"
                android:layout_width="360dp"
                android:layout_height="75dp"
                android:layout_marginTop="33dp"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="11dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    style="@style/FeatureText"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:text="@string/birthday" />

                <EditText
                    android:id="@+id/etDateOfBirth"
                    style="@style/NameText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:textColorHighlight="#FFFFFF"
                    android:textCursorDrawable="@color/feature_color" />

            </LinearLayout>

            <TextView
                android:id="@+id/dateOfBirthError"
                style="@style/FeatureText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/dateOfBirth_error"
                android:textColor="@color/error_color"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/phoneNumberLayout"
                android:layout_width="360dp"
                android:layout_height="75dp"
                android:layout_marginTop="33dp"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="11dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    style="@style/FeatureText"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/NameText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="90dp"
                    android:backgroundTint="@color/white"
                    android:inputType="number"
                    android:maxLength="60"
                    tools:ignore="TextFields" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-40dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/phoneNumberError"
                style="@style/FeatureText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/phoneNumber_error"
                android:textColor="@color/error_color"
                android:visibility="invisible"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="360dp"
                android:layout_height="75dp"
                android:layout_marginTop="33dp"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="11dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    style="@style/FeatureText"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/NameText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:maxLength="60"
                    android:textCursorDrawable="@color/feature_color" />

            </LinearLayout>

            <TextView
                android:id="@+id/emailError"
                style="@style/FeatureText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/email_error"
                android:textColor="@color/error_color"
                android:visibility="invisible"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:id="@+id/linearlayout6"
                android:layout_width="360dp"
                android:layout_height="133dp"
                android:layout_marginTop="33dp"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="11dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    style="@style/FeatureText"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:text="@string/note" />

                <EditText
                    android:id="@+id/etNote"
                    style="@style/NameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLength="100"
                    android:textCursorDrawable="@color/feature_color" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSaveUpdate"
        style="@style/ButtonText"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/button_ovalize"
        android:text="@string/page2_button" />

</RelativeLayout>